deploy/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: funkey
  labels:
    app.kubernetes.io/part-of: funkey
